--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   /* Footer Section */
   .section-footer {
     padding: var(--section-padding);
-    background-color: #FF4800;
+    background-color: #00AA03;
     position: relative;
   }
 
@@ -490,7 +490,7 @@
 
     <section id="showcase" class="section section-showcase" aria-labelledby="showcase-heading">
       <div class="showcase-wrapper">
-        <img src="Images/video_poster.png" alt="Showcase video poster image" loading="lazy">
+        <img src="Images/video_poster.jpg" alt="Showcase video poster image" loading="lazy">
         <button class="play-button" aria-label="Play showcase reel">
           <span>Play Reel</span>
         </button>
