Update showreel poster image to video_poster_01.jpg

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
     <section id="showcase" class="section section-showcase" aria-labelledby="showcase-heading">
       <div class="showcase-wrapper">
-        <img src="Images/video_poster.jpg" alt="Showcase video poster image" loading="lazy">
+        <img src="Images/video_poster_01.jpg" alt="Showcase video poster image" loading="lazy">
         <button class="play-button" aria-label="Play showcase reel">
           <span>Play Reel</span>
         </button>
