Add responsive poster images for cover videos - 1x1 for desktop, 9x16 for mobile

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         playsinline 
         preload="metadata" 
         class="hero-video hero-video-desktop" 
-        poster="Images/video_poster.png"
+        poster="Images/Cover_video_1x1.jpg"
         aria-hidden="true">
         <source src="Video/Cover_video_1x1.mp4" type="video/mp4">
         <p>Your browser does not support the video tag.</p>
@@ -398,7 +398,7 @@
         playsinline 
         preload="metadata" 
         class="hero-video hero-video-mobile" 
-        poster="Images/video_poster.png"
+        poster="Images/Cover_video_9x16.jpg"
         aria-hidden="true">
         <source src="Video/Cover_video_9x16.mp4" type="video/mp4">
         <p>Your browser does not support the video tag.</p>
@@ -512,7 +512,7 @@
       playsinline 
       preload="metadata" 
       class="footer-video" 
-      poster="Images/video_poster.png"
+      poster="Images/video_poster_01.jpg"
       aria-hidden="true">
       <source src="Video/footer_video.mp4" type="video/mp4">
       <p>Your browser does not support the video tag.</p>
