--- a/index.html
+++ b/index.html
@@ -236,6 +236,16 @@
     line-height: 110%;
   }
 
+  .disclaimer-text {
+    font-family: var(--primary-font);
+    font-size: 1em; /* 4 times bigger than 0.4375em */
+    color: var(--color-white);
+    line-height: 110%;
+    position: absolute;
+    bottom: var(--section-padding);
+    left: var(--section-padding);
+  }
+
   /* Logo Ticker Styles */
   .logo-ticker-container {
     position: absolute;
@@ -435,7 +445,7 @@
       </div>
     </section>
 
-    <section class="section section-about-block" aria-labelledby="who-heading">
+    <section class="section section-about-block" aria-labelledby="who-heading" style="position: relative;">
       <div class="section-about__block">
         <h2 id="who-heading" class="section-about__heading">WHO</h2>
         <p class="main-text">
@@ -446,6 +456,7 @@
           The Monkeys won more than 500 creative awards – including Cannes Lions, D&AD, One Show, Clio, Webbys, Australian Film Institute, Logies, multiple Grand Prix, plus 72 Agency of the Year Awards; with work featured in The Guiness Book of Records and the National Library of Australia. The agency was crowned B&T Australian Creative Agency of the Decade. In 2024 Drape was inducted into the AWARD Hall of Fame.
         </p>
       </div>
+      <p class="disclaimer-text">* The Showreel featured below is an overview of Justin's work in various roles, agencies and businesses.</p>
     </section>
 
     <section class="section section-about-block" aria-labelledby="community-heading">
@@ -519,8 +530,8 @@
       <a href="mailto:hello@creativityandcommerce.co" class="main-text">hello@creativityandcommerce.co</a>
       <a href="tel:+61433576891" class="main-text">+61 433 576 891</a>
       <br>
-      <a href="https://linkedin.com" class="main-text" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-      <a href="https://instagram.com" class="main-text" target="_blank" rel="noopener noreferrer">Instagram</a>
+      <a href="https://linkedin.com/company/108689068/admin/dashboard/" class="main-text" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+      <a href="https://www.instagram.com/creativityandcommerce" class="main-text" target="_blank" rel="noopener noreferrer">Instagram</a>
     </div>
     
     <div class="footer-legal">
