Remove title text to fix unwanted title display on staging

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Creativity & Commerce - Creative problem solving for commercial growth">
+  <meta name="description" content="Creativity & Commerce">
   <title>Creativity & Commerce</title>
 <style>
   /* Reset default margins and padding */
