--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Creativity & Commerce">
-  <title></title>
+  <title>Creativity & Commerce</title>
 <style>
   /* Reset default margins and padding */
   * {
