Add new showreel with logos and disclaimer text to WHO section

--- a/staging.html
+++ b/staging.html
@@ -128,6 +128,13 @@
     color: var(--color-white);
   }
 
+  .disclaimer-text {
+    position: absolute;
+    bottom: var(--section-padding);
+    left: var(--section-padding);
+    margin: 0;
+  }
+
   /* Showcase Section */
   .section-showcase {
     padding: var(--section-padding);
@@ -515,6 +522,11 @@
           <br><br>
           The Monkeys won more than 500 creative awards – including Cannes Lions, D&AD, One Show, Clio, Webbys, Australian Film Institute, Logies, multiple Grand Prix, plus 72 Agency of the Year Awards; with work featured in The Guiness Book of Records and the National Library of Australia. The agency was crowned B&T Australian Creative Agency of the Decade. In 2024 Drape was inducted into the AWARD Hall of Fame.
         </p>
+        
+        <!-- Disclaimer -->
+        <p class="small-text disclaimer-text">
+          The showreel below includes some of Drape's work from Exceptional ALIEN, The Monkeys and other art, talent and brand collaborations.
+        </p>
       </div>
     </section>
 
@@ -563,7 +575,7 @@
         </button>
         <div class="fullscreen-video-container">
           <video class="fullscreen-video" preload="metadata" controls>
-            <source src="Video/C&C_Showreel_EDIT_V12_optimized.mp4" type="video/mp4">
+            <source src="Video/Justin_Drape_Showreel_optimized.mp4" type="video/mp4">
             <p>Your browser does not support the video tag.</p>
           </video>
         </div>
