Update staging.html with correct alternative video paths

--- a/staging.html
+++ b/staging.html
@@ -457,7 +457,7 @@
         class="hero-video hero-video-desktop" 
         poster="Images/Cover_video_1x1.jpg"
         aria-hidden="true">
-        <source src="Video/Cover_video_1x1.mp4" type="video/mp4">
+        <source src="Video/Cover_video_1x1_2.mp4" type="video/mp4">
         <p>Your browser does not support the video tag.</p>
       </video>
       <video 
@@ -469,7 +469,7 @@
         class="hero-video hero-video-mobile" 
         poster="Images/Cover_video_9x16.jpg"
         aria-hidden="true">
-        <source src="Video/Cover_video_9x16.mp4" type="video/mp4">
+        <source src="Video/Cover_video_9x16_2.mp4" type="video/mp4">
         <p>Your browser does not support the video tag.</p>
       </video>
       
