--- a/staging.html
+++ b/staging.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Creativity & Commerce">
-  <title>Creativity & Commerce</title>
+  <title>Creativity & Commerce - STAGING</title>
 <style>
   /* Reset default margins and padding */
   * {
@@ -447,6 +447,7 @@
 </head>
 <body>
   <main>
+    <!-- STAGING VERSION - Alternative Videos -->
     <section id="hero" class="section section-hero" aria-label="Hero section with background video">
       <video 
         autoplay 
