--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
       
       <!-- Disclaimer -->
       <p class="small-text disclaimer-text">
-        This above showreel includes some of Drape's work from Exceptional ALIEN, The Monkeys and other art, talent and brand collaborations.
+        This showreel includes some of Drape's work from Exceptional ALIEN, The Monkeys and other art, talent and brand collaborations.
       </p>
     </section>
   </main>
@@ -642,7 +642,7 @@
     </video>
     
     <div class="footer-contact">
-      <a href="mailto:justin@creativityandcommerce.com" class="main-text">justin@creativityandcommerce.com</a>
+      <a href="mailto:justinrdrape@gmail.com" class="main-text">Email</a>
       <a href="tel:+61412141075" class="main-text">+61 412 141 075</a>
       <br>
       <a href="https://www.linkedin.com/company/creativity-commerce/" class="main-text" target="_blank" rel="noopener noreferrer">LinkedIn</a>
